log
Wed, Mar 19, 2025  8:42:45 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Wed, Mar 19, 2025  8:42:50 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
34633ae
Wed, Mar 19, 2025  8:43:39 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
588d826
Wed, Mar 19, 2025  8:45:24 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
37d93c5
Wed, Mar 19, 2025  8:46:37 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3523466
Wed, Mar 19, 2025  8:49:50 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
11715a9
Wed, Mar 19, 2025  8:50:33 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
089186f
Wed, Mar 19, 2025  8:50:51 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
901706c
Wed, Mar 19, 2025  8:51:27 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8ba4360
Wed, Mar 19, 2025  8:52:00 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cafda98
Wed, Mar 19, 2025  8:58:31 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5d05003
Wed, Mar 19, 2025  8:59:03 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5baabc8
Wed, Mar 19, 2025  8:59:15 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
9ee76f6
Wed, Mar 19, 2025  9:02:40 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d5307ea
Wed, Mar 19, 2025  9:05:42 AM: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:23: error: expected ')' before ';' token
    while( (*num) < 11 ;  )
                       ^
exercises.c:53:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
342d272
Wed, Mar 19, 2025  9:06:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:53:4: error: expected ';' before '}' token
    }
    ^
Compilation failed
888265c
Wed, Mar 19, 2025  9:07:32 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, (*num));
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:53:4: error: expected ';' before '}' token
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
183f0c6
Wed, Mar 19, 2025  9:09:05 AM: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:12: error: invalid type argument of unary '*' (have 'int')
    while( (*num) < 11 )
            ^~~~
exercises.c:49:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, (num));
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:51:4: error: expected ';' before '}' token
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
b4baf87
Wed, Mar 19, 2025  9:10:50 AM: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:20: error: expected expression before 'int'
       int* num = (*int) malloc(sizeof(int));
                    ^~~
exercises.c:48:25: error: expected ',' or ';' before 'malloc'
       int* num = (*int) malloc(sizeof(int));
                         ^~~~~~
Compilation failed
0c14e7a
Wed, Mar 19, 2025  9:11:11 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4393ce6
Wed, Mar 19, 2025  9:12:01 AM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 0/70
bb91bed
Wed, Mar 19, 2025  9:13:05 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2115503
Wed, Mar 19, 2025  9:13:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:13: error: expected identifier or '(' before '=' token
    for( int = i ; i <= 10 ; i++ )
             ^
exercises.c:47:19: error: 'i' undeclared (first use in this function)
    for( int = i ; i <= 10 ; i++ )
                   ^
exercises.c:47:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bee5b95
Wed, Mar 19, 2025  9:13:44 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:24: error: statement with no effect [-Werror=unused-value]
    for( int i = 1; ; i <= 10 ; i++ )
                      ~~^~~~~
exercises.c:47:30: error: expected ')' before ';' token
    for( int i = 1; ; i <= 10 ; i++ )
                              ^
cc1.exe: all warnings being treated as errors
Compilation failed
ac70dff
Wed, Mar 19, 2025  9:14:03 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
04131ec
Wed, Mar 19, 2025  9:16:18 AM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:68:18: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       (num2) += (*L);
                  ^~
exercises.c:65:9: error: variable 'num2' set but not used [-Werror=unused-but-set-variable]
    int* num2 = (int*) malloc(sizeof(int));
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0fe2f32
Wed, Mar 19, 2025  9:16:48 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:69:18: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       (num2) += (*L);
                  ^~
Compilation failed
fec46e3
